--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,18 @@
+.bigCounter{
+    text-align: center;
+    background-color: black;
+}
+
+.bigCounter div{
+    display: inline-block;
+    font-size: 60px;
+    line-height: 65px;
+    background-color: #0e0e0e;
+    color: white;
+    padding: 10px;
+    margin: 3px;
+}
+
 
 /* 
 
